--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>关于天尊</h1>
+            <h1>天尊史</h1>
         </div>
     </header>
 
@@ -62,12 +62,15 @@
             <p>首先天尊长得像个土豆，其次天尊常常表现出对喜欢的人的无限崇拜，总是希望能以各种方式引起对方的注意。他的这种态度虽然有时让人觉得有些傻逼，但更显得它装。</p>
 
             <h2>需要避雷</h2>
-            <p>如果你不想被天尊的美梦和追求所影响，最好在与他交往时保持一些距离。天尊的浪漫幻想可能会让人觉得有些压力，所以了解这些情况可以帮助你更好地处理与他的关系。天尊预计会在2024年9月10日被拷打😂。</p>
+            <p>如果你不想被天尊的美梦和追求所影响，最好在与他交往时保持一些距离。天尊的浪漫幻想可能会让人觉得有些压力，所以了解这些情况可以帮助你更好地处理与他的关系。天尊预计会在2024年9月10日被拷打😂。</p> 
+            
+             <h2>天尊新闻</h2>
+            <p>天尊战败，现已道歉。但隐隐约约透露着不服输🤓👆＿2024.9.10</p>
         </article>
     </div>
 
     <footer>
-        <p>&copy; 2024 珠海市第八中学初三八班 天尊介绍</p>
+        <p>&copy; 2024 珠海市第八中学</p>
     </footer>
 </body>
 </html>
