--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>天尊介绍</title>
+    <title>天尊史</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -65,7 +65,10 @@
             <p>如果你不想被天尊的美梦和追求所影响，最好在与他交往时保持一些距离。天尊的浪漫幻想可能会让人觉得有些压力，所以了解这些情况可以帮助你更好地处理与他的关系。天尊预计会在2024年9月10日被拷打😂。</p> 
             
              <h2>天尊新闻</h2>
-            <p>天尊战败，现已道歉。但隐隐约约透露着不服输🤓👆＿2024.9.10</p>
+            <p>天尊战败，现已道歉。但隐隐约约透露着不服输🤓👆＿2024.9.10
+            
+            9.11
+            天尊开始反咬，疯狂甩锅，称只与p某打游戏🎮，并没对p某做过什么，但是听过他造的谣的人多了去，之前还在别人家门口蹲人🤮。天尊今晚还能活着吗🤔？敬请期待.....</p>
         </article>
     </div>
 
