--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
-<html lang="zh">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>天尊史</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
+< html lang = “zh” >
+<头>
+    <元字符集= “UTF-8” >
+    < meta name = “viewport”  content = “width=device-width，initial-scale=1.0” >
+    < title >天尊史</ title >
+    <样式>
+        身体{
+            字体系列：Arial，sans-serif；
+            行高：1.6；
+            边距：0；
+            填充：0；
+            背景颜色：#f4f4f4；
         }
-        .container {
-            width: 80%;
-            margin: 0 auto;
-            overflow: hidden;
+        。容器{
+            宽度：80 %；
+            边距：0 自动；
+            溢出：隐藏；
         }
-        header {
-            background: #333;
-            color: #fff;
+        标题{
+            背景：#333；
+            颜色：#fff；
             padding-top: 30px;
             min-height: 70px;
             border-bottom: #ccc 3px solid;
@@ -35,7 +35,7 @@
             border-radius: 5px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
-        footer {
+        footer 
             text-align: center;
             padding: 10px;
             background: #333;
@@ -56,7 +56,7 @@
     <div class="container">
         <article>
             <h2>天尊简介</h2>
-            <p>天尊是珠海市第八中学初三八班的一名同学。虽然他在班级里很不受欢迎，但有一个小秘密——他是个典型的“舔狗”。天尊每天都在美梦中幻想和他喜欢的人在一起。</p>
+            <p>天尊是第八中学初三八班的一名同学。虽然他在班级里很不受欢迎，但有一个小秘密——他是个典型的“舔狗”。天尊每天都在美梦中幻想和他喜欢的人在一起。</p>
 
             <h2>天尊的特征</h2>
             <p>首先天尊长得像个土豆，其次天尊常常表现出对喜欢的人的无限崇拜，总是希望能以各种方式引起对方的注意。他的这种态度虽然有时让人觉得有些傻逼，但更显得它装。</p>
@@ -70,10 +70,10 @@
             9.11
             天尊开始反咬，疯狂甩锅，称只与p某打游戏🎮，并没对p某做过什么，但是听过他造的谣的人多了去，之前还在别人家门口蹲人🤮。天尊今晚还能活着吗🤔？敬请期待.....</p>
         </article>
-    </div>
+    </ div >
 
-    <footer>
-        <p>&copy; 2024 珠海市第八中学</p>
-    </footer>
-</body>
-</html>
+    <页脚>
+        <p> & copy ; 2024年 第八中学</p>
+    </页脚>
+</正文>
+</html>​​
